Fix styling for older versions of Safari on iOS
- `-webkit-appearance: none` removes the native dropdown arrow for the
  <select> element

- `border-size: 0` resets the default rounded <input type="color">

--- a/index.css
+++ b/index.css
@@ -33,6 +33,9 @@ ul {
 }
 
 button, select, input {
+    appearance: none;
+    -webkit-appearance: none;
+    border-radius: 0;
     border: none;
     cursor: pointer;
     font-size: 100%;
@@ -114,7 +117,6 @@ input[type=color] {
 
 .top-bar select {
     border-radius: 6px;
-    appearance: none;
     padding: 9px 13px;
     width: 100%;
     height: 100%;
